--- a/arch/arm64/configs/bluebolt_defconfig
+++ b/arch/arm64/configs/bluebolt_defconfig
@@ -570,3 +570,4 @@ CONFIG_LOCALVERSION="BlueBolt-RC-2.5"
 CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_CPU_FREQ_GOV_RELAXED=y
 CONFIG_CPU_FREQ_GOV_ELECTRON=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
