--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1082,4 +1082,19 @@ config TOUCHSCREEN_SYNAPTICS_S3320_I2C_RMI
 	help
 	  This enables support for Synaptics s1302 RMI over I2C based touch key.
 #endif /*VENDOR_EDIT*/
+
+config TOUCHBOOST_CONTROL
+	bool "Touch boost control"
+	depends on INPUT_TOUCHSCREEN
+	help
+	  Boeffla Kernels functionality to control input boost as touch boost
+	  in the Boeffla Config app
+
+config TOUCHSCREEN_SWEEP2SLEEP
+	bool "Enable kernel support for Sweep2Sleep"
+	default n
+
+config BOEFFLA_POWERKEY_HELPER
+	bool "Enable Boeffla Powerkey helper"
+	default n
 endif
