msm: Import autosmp hotplug driver
* From @dorimanx kernel.

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

Conflicts:
	drivers/soc/qcom/Kconfig
	drivers/soc/qcom/Makefile

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -647,6 +647,19 @@ config KERNEL_TEXT_MPU_PROT
 	  sections early in boot. Read access is permitted to
 	  all masters; Write access is only permited to the
 	  secure world.
+config STATE_NOTIFIER
+        bool "State Notifier"
+
+config STATE_HELPER
+        bool "State Helper"
+	depends on STATE_NOTIFIER
+
+config AUTOSMP
+	bool "Multi-core automatic hotplug support"
+	depends on SMP && HOTPLUG_CPU
+	help
+	  Automatically hotplugs the multiple cpu cores on and off
+	  based on cpu load and suspend state
 
 source "drivers/soc/qcom/memshare/Kconfig"
 
