--- a/arch/arm64/configs/bluebolt_defconfig
+++ b/arch/arm64/configs/bluebolt_defconfig
@@ -563,6 +563,7 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 
+
 # BlueBolt
 CONFIG_LOCALVERSION="BlueBolt-RC-2.5"
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
@@ -580,3 +581,5 @@ CONFIG_SCREEN_OFF=y
 CONFIG_BOEFFLA_TOUCH_KEY_CONTROL=y
 CONFIG_IOSCHED_SWITCHER=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+
