--- a/arch/arm/boot/dts/qcom/dsi-panel-sim-dualmipi0-video.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-sim-dualmipi0-video.dtsi
@@ -57,5 +57,9 @@
 		qcom,mdss-dsi-off-command-state = "dsi_hs_mode";
 		qcom,mdss-dsi-reset-sequence = <1 20>, <0 200>, <1 20>;
 		qcom,panel-ack-disabled;
+		qcom,mdss-dsi-pan-enable-dynamic-fps;
+		qcom,mdss-dsi-pan-fps-update = "dfps_immediate_porch_mode";
+		qcom,mdss-dsi-min-refresh-rate = <53>;
+		qcom,mdss-dsi-max-refresh-rate = <60>;
 	};
 };
