--- a/arch/arm/boot/dts/qcom/dsi-panel-sim-video.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-sim-video.dtsi
@@ -54,5 +54,9 @@
 		qcom,mdss-dsi-mdp-trigger = "none";
 		qcom,mdss-dsi-reset-sequence = <1 0>, <0 0>, <1 0>;
 		qcom,panel-ack-disabled;
+		qcom,mdss-dsi-pan-enable-dynamic-fps;
+		qcom,mdss-dsi-pan-fps-update = "dfps_immediate_porch_mode";
+		qcom,mdss-dsi-min-refresh-rate = <30>;
+		qcom,mdss-dsi-max-refresh-rate = <60>;
 	};
 };
