--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -526,7 +526,7 @@ CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_MSM_PERFORMANCE=y
-CONFIG_ONEPLUS_HCUBE=m
+CONFIG_ONEPLUS_HCUBE=n
 CONFIG_KERNEL_TEXT_MPU_PROT=y
 CONFIG_MSM_TZ_LOG=y
 CONFIG_PARAM_READ_WRITE=y
