Renamed Kernel to Desolation and set Maple as default IO from kernel

--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-aosp"
+CONFIG_LOCALVERSION="-Desolation"
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
@@ -588,3 +588,5 @@ CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_HALOPLUG=y
+CONFIG_DEFAULT_IOSCHED="maple"
+CONFIG_IOSCHED_MAPLE=y
