--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -588,5 +588,7 @@ CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_HALOPLUG=y
+CONFIG_DEFAULT_MAPLE=y
 CONFIG_DEFAULT_IOSCHED="maple"
 CONFIG_IOSCHED_MAPLE=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
