Hotplug:Add Alucard Hotplug
credits to the original developer of the Hotplug

Conflicts:
	arch/arm64/configs/oneplus2_defconfig

--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -589,3 +589,4 @@ CONFIG_DEFAULT_IOSCHED="maple"
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_BOEFFLA_TOUCH_KEY_CONTROL=y
+CONFIG_ALUCARD_HOTPLUG=y
