--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -34,6 +34,7 @@ CONFIG_MODULES=y
 CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_BFQ=y
+# CONFIG_IOSCHED_SIO is not set
 CONFIG_CGROUP_BFQIO=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8994=y
@@ -584,8 +585,8 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_DEFAULT_MAPLE=y
 CONFIG_DEFAULT_IOSCHED="maple"
-CONFIG_IOSCHED_MAPLE=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_BOEFFLA_TOUCH_KEY_CONTROL=y
