--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -32,11 +32,9 @@ CONFIG_PROFILING=y
 CONFIG_CC_STACKPROTECTOR_REGULAR=y
 CONFIG_MODULES=y
 CONFIG_PARTITION_ADVANCED=y
-CONFIG_DEFAULT_SIO=y
-CONFIG_DEFAULT_IOSCHED="sio"
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_BFQ=y
-CONFIG_IOSCHED_SIO=y
+# CONFIG_IOSCHED_SIO is not set
 CONFIG_CGROUP_BFQIO=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8994=y
@@ -588,7 +586,7 @@ CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_HALOPLUG=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_DEFAULT_MAPLE=y
 CONFIG_DEFAULT_IOSCHED="maple"
-CONFIG_IOSCHED_MAPLE=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
