--- a/arch/arm64/configs/bluebolt_defconfig
+++ b/arch/arm64/configs/bluebolt_defconfig
@@ -576,3 +576,4 @@ CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
+CONFIG_SCREEN_OFF=y
