defcofig:Enable autosmp by default

--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -590,3 +590,4 @@ CONFIG_DEFAULT_MAPLE=y
 CONFIG_DEFAULT_IOSCHED="maple"
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_BOEFFLA_TOUCH_KEY_CONTROL=y
+CONFIG_AUTOSMP=y
