--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -693,6 +693,8 @@ source "drivers/firmware/Kconfig"
 
 source "fs/Kconfig"
 
+source "arch/arm64/hotplug/AutoSMP/Kconfig"
+
 source "arch/arm64/kvm/Kconfig"
 
 source "arch/arm64/Kconfig.debug"
