--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -590,3 +590,4 @@ CONFIG_IOSCHED_MAPLE=y
 CONFIG_DEFAULT_MAPLE=y
 CONFIG_DEFAULT_IOSCHED="maple"
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_ASMP=y
