--- a/arch/arm64/configs/bluebolt_defconfig
+++ b/arch/arm64/configs/bluebolt_defconfig
@@ -1,4 +1,3 @@
-CONFIG_LOCALVERSION="-perf"
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
@@ -40,7 +39,7 @@ CONFIG_DEFAULT_NOOP=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8994=y
 CONFIG_ARCH_MSM8994_V1_TLBI_WA=y
-CONFIG_ARCH_MSM8992=y
+# CONFIG_ARCH_MSM8992 is not set
 CONFIG_PCI_MSM=y
 CONFIG_ARM64_A57_ERRATA_832075=y
 CONFIG_SMP=y
@@ -60,12 +59,10 @@ CONFIG_PM_RUNTIME=y
 CONFIG_SUSPEND_TIME=y
 CONFIG_CPU_FREQ=y
 CONFIG_SCHED_FREQ_INPUT=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-# CONFIG_CPU_BOOST is not set
-CONFIG_CPU_INPUT_BOOST=y
+CONFIG_CPU_BOOST=y
+# CONFIG_CPU_INPUT_BOOST is not set
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 CONFIG_NET=y
@@ -565,3 +562,10 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
+
+# BlueBolt
+CONFIG_LOCALVERSION="BlueBolt-RC-2.5"
+# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
+CONFIG_CPU_FREQ_GOV_CHILL=y
+CONFIG_CPU_FREQ_GOV_RELAXED=y
