--- a/arch/arm64/configs/bluebolt_defconfig
+++ b/arch/arm64/configs/bluebolt_defconfig
@@ -571,3 +571,8 @@ CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_CPU_FREQ_GOV_RELAXED=y
 CONFIG_CPU_FREQ_GOV_ELECTRON=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
