--- a/arch/arm64/configs/bluebolt_defconfig
+++ b/arch/arm64/configs/bluebolt_defconfig
@@ -577,3 +577,4 @@ CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_SCREEN_OFF=y
+CONFIG_BOEFFLA_TOUCH_KEY_CONTROL=y
