--- a/arch/arm64/configs/bluebolt_defconfig
+++ b/arch/arm64/configs/bluebolt_defconfig
@@ -578,3 +578,4 @@ CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_SCREEN_OFF=y
 CONFIG_BOEFFLA_TOUCH_KEY_CONTROL=y
+CONFIG_IOSCHED_SWITCHER=y
