Misc updated and derp fixups

--- a/arch/arm64/configs/bluebolt_defconfig
+++ b/arch/arm64/configs/bluebolt_defconfig
@@ -579,3 +579,4 @@ CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_SCREEN_OFF=y
 CONFIG_BOEFFLA_TOUCH_KEY_CONTROL=y
 CONFIG_IOSCHED_SWITCHER=y
+CONFIG_FORCE_FAST_CHARGE=y
