--- a/arch/arm64/configs/bluebolt_defconfig
+++ b/arch/arm64/configs/bluebolt_defconfig
@@ -544,7 +544,6 @@ CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_SECURITY_SELINUX=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_CTR=y
-CONFIG_CRYPTO_LZ4=y 
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_TWOFISH=y
@@ -582,4 +581,9 @@ CONFIG_BOEFFLA_TOUCH_KEY_CONTROL=y
 CONFIG_IOSCHED_SWITCHER=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
-
+CONFIG_HAVE_KERNEL_LZ4=y
+# CONFIG_KERNEL_GZIP is not set
+CONFIG_KERNEL_LZ4=y
+CONFIG_CRYPTO_LZ4=y
+CONFIG_CRYPTO_LZ4HC=y
+CONFIG_LZ4HC_COMPRESS=y
